feat: add max connector contract
